--- a/src/app/pages/collections/create/pickup.component.html
+++ b/src/app/pages/collections/create/pickup.component.html
@@ -52,6 +52,9 @@
                     required</small>
                 </div>
 
+                <p *ngIf="rsubmitted">Names: {{user_collecting}} </p>
+                <p *ngIf="rsubmitted">Mobile: {{userMobileNumber}}</p>
+
                 <p *ngIf="rsubmitted">
                   A verification code has been sent to {{userMobileNumber}}. Input it below to complete the pickup
                   process.
@@ -87,17 +90,22 @@
                         <th>Store</th>
                         <th>Date Released</th>
                         <th>Status</th>
+                        <th>Item Code</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr *ngFor="let item of customerItems; let i = index" title={{item.id}}>
-                        <td><input type="checkbox" value="{{item.id}}" /> </td>
+                        <td><input type="checkbox" value="{{item.id}}" (change)="itemSelected($event)" /> </td>
                         <td>{{item.customer_names}}</td>
                         <td>{{item.item_description}}</td>
                         <td>{{(item.pick_up_type =='store_pickup')?'customer pick up':'lipalater pick up'}}</td>
                         <td>{{item.store}}</td>
                         <td>{{item.created_at | date}}</td>
                         <td>{{item.status}}</td>
+                        <td> <input id="{{item.id}}" (mouseout)="itemCodeValues($event)" placeholder="Item Code"
+                            type="text"></td>
+
+                        <!--[readonly]="isCodeReadOnly()"-->
 
                       </tr>
                     </tbody>
@@ -106,17 +114,9 @@
 
                 </div>
 
+
                 <div class="form-group" *ngIf="rsubmitted">
-                  <label> Item Code </label>
-
-                  <input formControlName="itemCode" class="form-control validation-field" placeholder="Item Code"
-                    type="text">
-
-
-
-                </div>
-                <div class="form-group" *ngIf="rsubmitted">
-                  <label> Item Code </label>
+                  <label> Pick up notes </label>
                   <textarea formControlName="pickupNotes" class="form-control validation-field"
                     placeholder="Pickup Notes"></textarea>
 
