--- a/src/app/pages/internal-users/update/update.component.html
+++ b/src/app/pages/internal-users/update/update.component.html
@@ -26,7 +26,7 @@
         <div id="cccform" class="container">
           <div class="row form-heading">
             <div class="col-md-1"></div>
-            <h4 class="col-md-11">Updating Store User</h4>
+            <h4 class="col-md-11">Updating Internal User</h4>
           </div>
           <hr>
           <div class="row">
