--- a/src/app/pages/internal-users/lipalater-users.component.html
+++ b/src/app/pages/internal-users/lipalater-users.component.html
@@ -2,7 +2,8 @@
   <div class="box box-primary">
     <div class="box-body">
       <div class="widget-controls">
-        <a class="btn btn-info btn-sm mb-1" routerLink="/users/create"><i class="fa fa-plus"></i> Add Store User</a>
+        <a class="btn btn-info btn-sm mb-1" routerLink="/lipalater-users/create"><i class="fa fa-plus"></i> Add Internal
+          User</a>
       </div>
       <span id="responseText"></span>
       <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
