--- a/src/app/pages/pending/pending.component.html
+++ b/src/app/pages/pending/pending.component.html
@@ -1,6 +1,9 @@
 <block-ui>
   <div class="box box-primary">
     <div class="box-body">
+      <div class="widget-controls">
+        Items awaiting collection
+      </div>
 
       <span id="responseText"></span>
       <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
