--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,66 +1,73 @@
 <div class="wrapper">
-  <nav id="sidebar" *ngIf="currentUser" >
-  <div class="sidebar-header">
-    <img src="./assets/logo.png"/>
-  </div>
-    <div class="container demo d-none d-md-block" >
-       <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0,ngb-panel-1,ngb-panel-2" class="panel-group">
+  <nav id="sidebar" *ngIf="currentUser">
+    <div class="sidebar-header">
+      <img src="./assets/logo.png" />
+    </div>
+    <div class="container demo d-none d-md-block">
+      <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0,ngb-panel-1,ngb-panel-2" class="panel-group">
         <ngb-panel class="panel-default">
           <ng-template ngbPanelTitle class="panel-heading">
             <h4 class="panel-title">
-              <a role="button" data-toggle="collapse" data-parent="#accordion" aria-expanded="true" aria-controls="collapseOne">
-              Navigation
+              <a role="button" data-toggle="collapse" data-parent="#accordion" aria-expanded="true"
+                aria-controls="collapseOne">
+                Navigation
               </a>
             </h4>
           </ng-template>
           <ng-template ngbPanelContent>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
-                <a class="nav-link sales-link"  routerLink="/partners">Partners
+                <a class="nav-link sales-link" routerLink="/partners">Partners
                   <i class="fa fa-handshake-o" style="color:#88b840"></i>
                 </a>
               </li>
-               <li class="list-group-item">
-                <a class="nav-link sales-link"  routerLink="/stores">Stores
+              <li class="list-group-item">
+                <a class="nav-link sales-link" routerLink="/stores">Stores
                   <i class="fa fa-city" style="color:#88b840"></i>
                   <i class="fa fa-industry" style="color:#88b840"></i>
                 </a>
               </li>
-               <li class="list-group-item">
-                <a class="nav-link sales-link"  routerLink="/pending">Pending
+              <li class="list-group-item">
+                <a class="nav-link released-link" routerLink="/users">Store Users
+                  <i class="fa fa-users" style="color:#88b840"></i>
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a class="nav-link released-link" routerLink="/lipalater-users">Internal Users
+                  <i class="fa fa-users" style="color:#88b840"></i>
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a class="nav-link sales-link" routerLink="/pending">Pending
                   <i class="fa fa-gift" style="color:#88b840"></i>
                 </a>
               </li>
               <li class="list-group-item">
-                <a class="nav-link sales-link"  routerLink="/collections">Collection
+                <a class="nav-link sales-link" routerLink="/collections">Collection
                   <i class="fa fa-cart-plus" style="color:#88b840"></i>
                 </a>
               </li>
 
 
               <li class="list-group-item">
-                <a class="nav-link released-link" routerLink="/released" >Released Items
+                <a class="nav-link released-link" routerLink="/released">Released Items
                   <i class="fa fa-sign-out" style="color:#88b840"></i>
                 </a>
               </li>
               <li class="list-group-item">
-                <a class="nav-link released-link" routerLink="/sales" >Sales
+                <a class="nav-link released-link" routerLink="/sales">Sales
                   <i class="fa fa-list" style="color:#88b840"></i>
                 </a>
               </li>
-              <li class="list-group-item">
-                <a class="nav-link released-link" routerLink="/users" >Users
-                  <i class="fa fa-users" style="color:#88b840"></i>
-                </a>
-              </li>
+
 
 
             </ul>
           </ng-template>
-           <ng-template ngbPanelTitle class="panel-heading">
+          <ng-template ngbPanelTitle class="panel-heading">
             <h4 class="panel-title">
-              <a role="button" data-toggle="collapse"  aria-expanded="true" aria-controls="">
-              Navigation
+              <a role="button" data-toggle="collapse" aria-expanded="true" aria-controls="">
+                Navigation
               </a>
             </h4>
           </ng-template>
@@ -68,24 +75,27 @@
 
 
       </ngb-accordion>
-      <hr/>
+      <hr />
     </div><!-- container -->
   </nav>
   <div id="content">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" *ngIf="currentUser" >
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" *ngIf="currentUser">
       <div class="container-fluid topbar">
-        <button type="button" id="sidebarCollapse" class="btn" style="background: #7386D5; color:white; margin-left: -60px">
+        <button type="button" id="sidebarCollapse" class="btn"
+          style="background: #7386D5; color:white; margin-left: -60px">
           <i class="fa fa-angle-double-left"></i>
           <i class="fa fa-angle-double-right"></i>
         </button>
-        <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fa fa-align-justify"></i>
+        <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
+          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <i class="fa fa-align-justify"></i>
 
         </button>
         <!--navbar-toggler-icon -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <div>
-          <h2 class="store-name">{{currentUser.user.firstname}} @ {{currentUser.store.name}}</h2>
+            <h2 class="store-name">{{currentUser.user.firstname}} @ {{currentUser.store.name}}</h2>
           </div>
           <ul class="nav navbar-nav ml-auto">
             <li class="nav-item">
@@ -94,12 +104,12 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="top-link sales-link" routerLink="/pending" >
+              <a class="top-link sales-link" routerLink="/pending">
                 <i class="fa fa-gift" style="color:#88b840"></i> Pending
               </a>
             </li>
             <li class="nav-item">
-              <a class="top-link notification-link" routerLink="/collections" >
+              <a class="top-link notification-link" routerLink="/collections">
                 <i class="fa fa-cart-plus" style="color:#88b840"></i> Collections
               </a>
             </li>
@@ -109,8 +119,8 @@
               </a>
             </li>
 
-             <li class="nav-item">
-              <a class="top-link sales-link" routerLink="/sales" >
+            <li class="nav-item">
+              <a class="top-link sales-link" routerLink="/sales">
                 <i class="fa fa-list" style="color:#88b840"></i> Sales
               </a>
             </li>
@@ -139,15 +149,15 @@
         </div>
       </div>
     </nav>
-    <div class ="row dynamicContent">
+    <div class="row dynamicContent">
 
-     <alert></alert>
+      <alert></alert>
       <router-outlet></router-outlet>
 
     </div>
   </div>
 </div>
-<div class ="row">
+<div class="row">
   <footer class="main-footer">
     <b>Version</b> 1.0.0
     <strong>Copyright &copy; lipalater.com 2019 .</strong> All rights reserved.
