--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
           <div class="card bg-success text-white h-100">
             <div class="card-body bg-success">
               <div class="rotate">
-                <i class="fa fa-handshake-o"></i>
+                <i class="fa fa-users fa-4x"></i>
               </div>
               <h6 class="text-uppercase">Partners</h6>
               <h1 class="display-4">{{data.partners}}</h1>
@@ -22,8 +22,8 @@
           </div>
         </div>
         <div class="col-xl-3 col-sm-6 py-2">
-          <div class="card text-white bg-danger h-100">
-            <div class="card-body bg-danger">
+          <div class="card text-white bg-primary h-100">
+            <div class="card-body bg-primary">
               <div class="rotate">
                 <i class="fa fa-list fa-4x"></i>
               </div>
@@ -44,7 +44,7 @@
           </div>
         </div>
         <div class="col-xl-3 col-sm-6 py-2">
-          <div class="card text-white bg-warning h-100">
+          <div class="card text-white bg-danger h-100">
             <div class="card-body">
               <div class="rotate">
                 <i class="fa fa-users fa-4x"></i>
@@ -124,19 +124,27 @@
         <table class="table table-hover">
           <thead>
             <tr>
+              <th></th>
               <th>Item</th>
               <th>Customer</th>
+              <th>Customer Id</th>
+              <th>Customer Phone</th>
               <th>Store</th>
               <th>Pickup type</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>John</td>
-              <td>Doe</td>
-              <td>john@example.com</td>
-              <td></td>
+            <tr *ngFor="let item of sales.pending; let i = index" title={{item.id}}>
+              <td>{{i+1}}</td>
+              <td>{{item.item_description}}</td>
+              <td>{{item.customer_names}} </td>
+              <td>{{item.customer_id_number}} </td>
+              <td>{{item.customer_phone_number}}</td>
+              <td>{{item.store}}</td>
+              <td>{{(item.pick_up_type =='store_pickup')?'customer pick up':'lipalater pick up'}}</td>
+
             </tr>
+
 
           </tbody>
         </table>
@@ -151,21 +159,25 @@
 
         <table class="table table-hover">
           <thead>
-            <tr *ngFor="let item of sales.collected; let i = index" title={{item.id}}>
-              <td>{{i+1}}</td>
-              <td>{{item.customer_names}} Id: {{item.customer_id_number}} Phone {{item.customer_phone_number}}</td>
-              <td>{{item.item}}</td>
-              <td>{{item.collected_by_name}} Id: {{item.collected_by_id_number}}</td>
-              <td>{{item.store}}</td>
+            <tr>
+              <th></th>
+              <th>Customer</th>
+              <th>Customer Id</th>
+              <th>Customer Phone</th>
+              <th>item</th>
+              <th>Colected By</th>
+              <th>Store</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>John</td>
-              <td>Doe</td>
-              <td>john@example.com</td>
-              <td></td>
-              <td></td>
+            <tr *ngFor="let item of sales.collected; let i = index" title={{item.id}}>
+              <td>{{i+1}}</td>
+              <td>{{item.customer_names}} </td>
+              <td>{{item.customer_id_number}} </td>
+              <td>{{item.customer_phone_number}}</td>
+              <td>{{item.item}}</td>
+              <td>{{item.collected_by_name}} Id: {{item.collected_by_id_number}}</td>
+              <td>{{item.store}}</td>
             </tr>
 
           </tbody>
