--- a/src/styles.css
+++ b/src/styles.css
@@ -325,9 +325,9 @@ a.article:hover {
 }
 
 div.card-body {
-  padding-top: 0rem !important;
+  padding-top: 1.25rem !important;
   padding-right: 0.5rem !important;
-  padding-bottom: 0rem !important;
+  padding-bottom: 1rem !important;
   padding-left: 1rem !important;
 }
 
@@ -448,10 +448,39 @@ a[aria-expanded="true"] {
 
 }
 
+.card {
+  overflow: hidden;
+}
+
+
+
+.card-body .rotate {
+  z-index: 8;
+  float: right;
+  height: 100%;
+}
+
+.card-body .rotate i {
+  color: rgba(20, 20, 20, 0.15);
+  position: absolute;
+  left: 0;
+  left: auto;
+  right: -10px;
+  bottom: 0;
+  display: block;
+  -webkit-transform: rotate(-44deg);
+  -moz-transform: rotate(-44deg);
+  -o-transform: rotate(-44deg);
+  -ms-transform: rotate(-44deg);
+  transform: rotate(-44deg);
+}
+
 #div-dashboard {
   border: 2px dashed #ddd;
   padding-top: 30px;
   border-radius: 5px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 app-be-update,
