--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
                 <i class="fa fa-users fa-4x"></i>
               </div>
               <h6 class="text-uppercase">Partners</h6>
-              <h1 class="display-4">{{data.partners}}</h1>
+              <h1 class="display-4">{{partners}}</h1>
             </div>
           </div>
         </div>
@@ -28,7 +28,7 @@
                 <i class="fa fa-list fa-4x"></i>
               </div>
               <h6 class="text-uppercase">Stores</h6>
-              <h1 class="display-4">{{data.stores}}</h1>
+              <h1 class="display-4">{{stores}}</h1>
             </div>
           </div>
         </div>
@@ -39,7 +39,7 @@
                 <i class="fa fa-users fa-4x"></i>
               </div>
               <h6 class="text-uppercase">Store Users</h6>
-              <h1 class="display-4">{{data.store_users}}</h1>
+              <h1 class="display-4">{{store_users}}</h1>
             </div>
           </div>
         </div>
@@ -50,7 +50,7 @@
                 <i class="fa fa-users fa-4x"></i>
               </div>
               <h6 class="text-uppercase">Internal Users</h6>
-              <h1 class="display-4">{{data.internal_users}}</h1>
+              <h1 class="display-4">{{internal_users}}</h1>
             </div>
           </div>
         </div>
@@ -73,7 +73,7 @@
                 <i class="fa fa-user fa-4x"></i>
               </div>
               <h6 class="text-uppercase">Items Picked</h6>
-              <h1 class="display-4">{{sales.collected_count}}</h1>
+              <h1 class="display-4">{{collected_count}}</h1>
             </div>
           </div>
         </div>
@@ -84,7 +84,7 @@
                 <i class="fa fa-list fa-4x"></i>
               </div>
               <h6 class="text-uppercase">Value Picked</h6>
-              <h1 class="display-4">{{sales.collected_value}}</h1>
+              <h1 class="display-4">{{collected_value}}</h1>
             </div>
           </div>
         </div>
@@ -95,7 +95,7 @@
                 <i class="fa fa-twitter fa-4x"></i>
               </div>
               <h6 class="text-uppercase">Items Pending Pickup</h6>
-              <h1 class="display-4">{{sales.pending_count}}</h1>
+              <h1 class="display-4">{{pending_count}}</h1>
             </div>
           </div>
         </div>
@@ -106,7 +106,7 @@
                 <i class="fa fa-share fa-4x"></i>
               </div>
               <h6 class="text-uppercase">Value Pending Pickup</h6>
-              <h1 class="display-4">{{sales.pending_value}}</h1>
+              <h1 class="display-4">{{pending_value}}</h1>
             </div>
           </div>
         </div>
@@ -134,7 +134,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let item of sales.pending; let i = index" title={{item.id}}>
+            <tr *ngFor="let item of pending; let i = index" title={{item.id}}>
               <td>{{i+1}}</td>
               <td>{{item.item_description}}</td>
               <td>{{item.customer_names}} </td>
@@ -170,7 +170,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let item of sales.collected; let i = index" title={{item.id}}>
+            <tr *ngFor="let item of collected; let i = index" title={{item.id}}>
               <td>{{i+1}}</td>
               <td>{{item.customer_names}} </td>
               <td>{{item.customer_id_number}} </td>
