--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -44,7 +44,7 @@
           </div>
         </div>
         <div class="col-xl-3 col-sm-6 py-2">
-          <div class="card text-white bg-danger h-100">
+          <div class="card text-white bg-dark h-100">
             <div class="card-body">
               <div class="rotate">
                 <i class="fa fa-users fa-4x"></i>
