--- a/src/app/pages/sales/sales.component.html
+++ b/src/app/pages/sales/sales.component.html
@@ -2,7 +2,7 @@
   <div class="box box-primary">
     <div class="box-body">
       <div class="widget-controls">
-        <a class="btn btn-info btn-sm mb-1" (click)="downloadApps()"><i class="fa fa-download"></i> Update Sales
+        <a class="btn btn-info btn-sm mb-1" (click)="downloadApps()"><i class="fa fa-refresh"></i> Update Sales
           List</a>
 
       </div>
