--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,11 +1,43 @@
 <block-ui>
   <div class="box box-primary">
     <div class="box-body">
-      <div class="widget-controls">
-        <a class="btn btn-info btn-sm mb-1" routerLink="/users/create"><i class="fa fa-plus"></i> Add Store User</a>
+      <div class="widget-controls row">
+        <div class="col-sm-6">
+          <a class="btn btn-info btn-sm mb-1" routerLink="/users/create"><i class="fa fa-plus"></i> Add Store User</a>
+        </div>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-4">
+          <div class="input-group search-box">
+            <input type="text" class="form-control search-input" placeholder="Search this content">
+            <div class="input-group-append">
+              <button class="btn btn-info" type="button">
+                <i class="fa fa-search"></i>
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
+
       <span id="responseText"></span>
-      <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
+
+      <table class="table table-striped table-sm row-border hover">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Color</th>
+            <th>Value</th>
+
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of data; let i = index">
+            <td>{{i+1}}</td>
+            <td>color</td>
+            <td>value</td>
+          </tr>
+        </tbody>
+      </table>
+      <!--table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
         <thead>
           <tr>
             <th></th>
@@ -38,7 +70,23 @@
             </td>
           </tr>
         </tbody>
-      </table>
+      </table -->
+
+      <nav aria-label="...">
+        <ul class="pagination">
+          <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1">Previous</a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item active">
+            <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#">Next</a>
+          </li>
+        </ul>
+      </nav>
 
     </div>
   </div>
